tests/e2e/semantics/mutation/invalid_arg.story
a = [1, 2] contains item:1 bar:2
a = "foo"
